--- a/temperature/result.html
+++ b/temperature/result.html
@@ -1,16 +1,14 @@
+
 <!doctype html>
 
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title></title>
-
+  <title>Temperatures</title>
+  
 </head>
 
-<body id="planets">
+<body>
 
-
-
-<script src="arrays.js"></script>
 </body>
 </html>
